--- a/ResizableButtonTest/Base.lproj/MainMenu.xib
+++ b/ResizableButtonTest/Base.lproj/MainMenu.xib
@@ -659,27 +659,32 @@
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="RE0-4q-Tt7" customClass="NKDrawNinePartImageView">
                         <rect key="frame" x="0.0" y="0.0" width="492" height="360"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    </customView>
-                    <button translatesAutoresizingMaskIntoConstraints="NO" id="Wno-gu-Rlk" customClass="NKResizableButton">
-                        <rect key="frame" x="26" y="71" width="440" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <subviews>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="p8t-e6-XSI" customClass="NKResizableButton">
+                                <rect key="frame" x="153" y="123" width="112" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Z6Q-CQ-lvC"/>
+                                    <constraint firstAttribute="height" constant="100" id="ead-vW-9bQ"/>
+                                </constraints>
+                                <buttonCell key="cell" type="smallSquare" title="Button" bezelStyle="smallSquare" alignment="center" imageScaling="proportionallyDown" inset="2" id="3jl-Ch-JM9">
+                                    <behavior key="behavior" lightByContents="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="4eo-X9-4Jn"/>
+                            <constraint firstAttribute="bottom" secondItem="p8t-e6-XSI" secondAttribute="bottom" constant="130" id="gtP-CM-BRx"/>
+                            <constraint firstItem="p8t-e6-XSI" firstAttribute="leading" secondItem="RE0-4q-Tt7" secondAttribute="leading" constant="159" id="lMQ-Ab-bcw"/>
+                            <constraint firstAttribute="width" constant="492" id="yFw-72-2fa"/>
                         </constraints>
-                        <buttonCell key="cell" type="smallSquare" title="Button" bezelStyle="smallSquare" alignment="center" imageScaling="proportionallyDown" inset="2" id="AgN-zA-D4q">
-                            <behavior key="behavior" lightByContents="YES"/>
-                            <font key="font" metaFont="system"/>
-                        </buttonCell>
-                    </button>
+                    </customView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Wno-gu-Rlk" secondAttribute="trailing" constant="26" id="91y-tp-2wL"/>
                     <constraint firstAttribute="trailing" secondItem="RE0-4q-Tt7" secondAttribute="trailing" id="ee9-eA-UXv"/>
                     <constraint firstItem="RE0-4q-Tt7" firstAttribute="leading" secondItem="372" secondAttribute="leading" id="j6x-T7-N7g"/>
                     <constraint firstAttribute="bottom" secondItem="RE0-4q-Tt7" secondAttribute="bottom" id="odJ-cq-VJ9"/>
                     <constraint firstItem="RE0-4q-Tt7" firstAttribute="top" secondItem="372" secondAttribute="top" id="vcn-1o-2TZ"/>
-                    <constraint firstItem="Wno-gu-Rlk" firstAttribute="leading" secondItem="372" secondAttribute="leading" constant="26" id="wmh-80-euD"/>
-                    <constraint firstAttribute="bottom" secondItem="Wno-gu-Rlk" secondAttribute="bottom" constant="71" id="zIl-Zw-o8K"/>
                 </constraints>
             </view>
         </window>
@@ -692,7 +697,7 @@
         <viewController id="7F3-2x-oHe" customClass="NKTestViewController">
             <connections>
                 <outlet property="ninePartImageView" destination="RE0-4q-Tt7" id="DwL-ph-NLl"/>
-                <outlet property="resizableButton" destination="Wno-gu-Rlk" id="nqj-uR-gNt"/>
+                <outlet property="resizableButton" destination="p8t-e6-XSI" id="u82-Us-4RB"/>
             </connections>
         </viewController>
     </objects>
